fixed svg sizes being too big when expanded

--- a/Navigation Menu/Example-2/styles/main.scss
+++ b/Navigation Menu/Example-2/styles/main.scss
@@ -82,8 +82,9 @@ main {
     color: var(--text-primary);
 
     svg {
-        min-width: 2rem;
-        margin: 0 1.5rem;
+  width: 2rem;
+  min-width: 2rem;
+  margin: 0 1.5rem;
     }
 
 }
